<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".MainActivity">

        <EditText
            android:id="@+id/editText1"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:inputType="numberDecimal|numberSigned"
            app:layout_constraintBottom_toTopOf="@id/editText4"
            app:layout_constraintEnd_toStartOf="@id/editText2"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:inputType="numberDecimal|numberSigned"
            app:layout_constraintEnd_toStartOf="@id/editText3"
            app:layout_constraintStart_toEndOf="@+id/editText1"
            app:layout_constraintTop_toTopOf="@id/editText1" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:ems="10"
            android:inputType="numberDecimal|numberSigned"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/editText2"
            app:layout_constraintTop_toTopOf="@id/editText1" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="numberDecimal|numberSigned"
            app:layout_constraintEnd_toStartOf="@id/editText5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editText1" />

        <EditText
            android:id="@+id/editText5"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:inputType="numberDecimal|numberSigned"
            app:layout_constraintEnd_toStartOf="@id/editText6"
            app:layout_constraintStart_toEndOf="@+id/editText4"
            app:layout_constraintTop_toTopOf="@id/editText4" />

        <EditText
            android:id="@+id/editText6"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:ems="10"
            android:inputType="numberDecimal|numberSigned"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/editText5"
            app:layout_constraintTop_toTopOf="@id/editText4" />


        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editText4"
            tools:text="@tools:sample/lorem" />
    </android.support.constraint.ConstraintLayout>
</android.support.design.widget.CoordinatorLayout>